Fixed overflow of the product title

--- a/ecommerce/client/src/app/pages/createProduct/CreateProduct.scss
+++ b/ecommerce/client/src/app/pages/createProduct/CreateProduct.scss
@@ -159,18 +159,6 @@
 		flex-direction: row;
 		justify-content: center;
 		align-items: center;
-
-		.btn {
-			background-color: lightblue;
-			border: none;
-			outline: none;
-			border-radius: 5px;
-			padding: 10px;
-			margin: 5px;
-			
-			&:hover {
-				cursor: pointer;
-			}
-		}
+		margin: 30px;
 	}
 }
